- show ip address as tab title for router config - replace LinkedList by List (property networkInterfaces)